# aws-sdk-cpp

./: .gitignore  CMakeLists.txt
aws-cpp-sdk-sqs-extended-lib/: CMakeLists.txt
aws-cpp-sdk-sqs-extended-lib-integration-tests/: CMakeLists.txt  ExtendedQueueOperationTest.cpp  SQSExtendedLibIntegrationTest.cpp
aws-cpp-sdk-sqs-extended-lib/include/aws/sqs/extendedlib/: ExtendedClientConfiguration.h  SQSExtendedClient.h  SQSExtendedClientConfiguration.h  SQSLargeMessageS3Pointer.h
aws-cpp-sdk-sqs-extended-lib/source/: ExtendedClientConfiguration.cpp  SQSExtendedClient.cpp  SQSExtendedClientConfiguration.cpp  SQSLargeMessageS3Pointer.cpp
